--- a/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PageCompetition.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PageCompetition.fxml
@@ -47,11 +47,11 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                <Button fx:id="btnCompte" contentDisplay="TOP" mnemonicParsing="false" onAction="#handleAccueil" text="Mon Compte">
+                <Button fx:id="btnDeco" contentDisplay="TOP" mnemonicParsing="false" onAction="#handleDeconnexion" text="Déconnexion">
                      <graphic>
                         <ImageView blendMode="MULTIPLY" cache="true" fitHeight="62.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@../img/logoUtilisateur.png" />
+                              <Image url="@../img/logoDeconnexion.png" />
                            </image>
                         </ImageView>
                      </graphic>
