--- a/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PageCompetition.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PageCompetition.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -13,65 +14,6 @@
 <?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-border-color: black;" BorderPane.alignment="CENTER">
-         <children>
-            <ButtonBar>
-              <buttons>
-                  <Button fx:id="btnAcceuil" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: transparent;">
-                     <graphic>
-                        <ImageView blendMode="MULTIPLY" fitHeight="91.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../img/logoJO.jpg" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-              </buttons>
-            </ButtonBar>
-            <ButtonBar>
-              <buttons>
-                <Button fx:id="btnCompetitions" mnemonicParsing="false" prefHeight="50.0" style="-fx-background-color: lime;" text="Compétitions" />
-                  <Button fx:id="btnClassement" mnemonicParsing="false" onAction="#handlePays" prefHeight="50.0" text="Classement des pays" textAlignment="CENTER" wrapText="true" />
-                  <Button fx:id="btnParticipant" mnemonicParsing="false" onAction="#handleParticipant" prefHeight="50.0" text="Participant" />
-              </buttons>
-            </ButtonBar>
-            <ButtonBar>
-              <buttons>
-                  <Button fx:id="btnParam" contentDisplay="TOP" mnemonicParsing="false" text="Paramètre">
-                     <graphic>
-                        <ImageView blendMode="MULTIPLY" cache="true" fitHeight="70.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../img/logoParam.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                <Button fx:id="btnDeco" contentDisplay="TOP" mnemonicParsing="false" onAction="#handleDeconnexion" text="Déconnexion">
-                     <graphic>
-                        <ImageView blendMode="MULTIPLY" cache="true" fitHeight="62.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../img/logoDeconnexion.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-              </buttons>
-            </ButtonBar>
-         </children>
-      </HBox>
-   </top>
-   <left>
-      <VBox prefHeight="349.0" prefWidth="214.0" style="-fx-border-color: black; -fx-border-style: solid;" BorderPane.alignment="CENTER">
-         <children>
-
-            <Button fx:id="homme" mnemonicParsing="false" onAction="#handleHommeEnable" text="H" />
-            <RadioButton fx:id="sport1" mnemonicParsing="false" text="handball" visible="false" />
-            <RadioButton mnemonicParsing="false" text="RadioButton" />
-            <Button mnemonicParsing="false" text="F" />
-         </children>
-      </VBox>
-   </left>
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
@@ -132,4 +74,73 @@
          </BorderPane.margin>
       </VBox>
    </center>
+   <top>
+      <VBox prefHeight="100.0" prefWidth="890.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <ButtonBar>
+                    <buttons>
+                        <Button fx:id="btnAcceuil" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: transparent;">
+                           <graphic>
+                              <ImageView blendMode="MULTIPLY" fitHeight="91.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/logoJO.jpg" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                    </buttons>
+                  </ButtonBar>
+                  <ButtonBar>
+                    <buttons>
+                      <Button fx:id="btnCompetitions" mnemonicParsing="false" prefHeight="50.0" style="-fx-background-color: khaki;" text="Compétitions" />
+                        <Button fx:id="btnClassement" mnemonicParsing="false" onAction="#handlePays" prefHeight="50.0" text="Classement des pays" textAlignment="CENTER" wrapText="true" />
+                        <Button fx:id="btnParticipant" mnemonicParsing="false" onAction="#handleParticipant" prefHeight="50.0" text="Participant" />
+                    </buttons>
+                  </ButtonBar>
+                  <ButtonBar>
+                    <buttons>
+                        <Button fx:id="btnParam" contentDisplay="TOP" mnemonicParsing="false" text="Paramètre">
+                           <graphic>
+                              <ImageView blendMode="MULTIPLY" cache="true" fitHeight="70.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/logoParam.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                      <Button fx:id="btnDeco" contentDisplay="TOP" mnemonicParsing="false" onAction="#handleDeconnexion" text="Déconnexion">
+                           <graphic>
+                              <ImageView blendMode="MULTIPLY" cache="true" fitHeight="62.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/logoDeconnexion.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                    </buttons>
+                  </ButtonBar>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" style="-fx-background-color: black;" />
+         </children>
+      </VBox>
+   </top>
+   <left>
+      <HBox prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="400.0" prefWidth="200.0">
+               <children>
+      
+                  <Button fx:id="homme" mnemonicParsing="false" onAction="#handleHommeEnable" text="H" />
+                  <RadioButton fx:id="sport1" mnemonicParsing="false" text="handball" visible="false" />
+                  <RadioButton mnemonicParsing="false" text="RadioButton" />
+                  <Button mnemonicParsing="false" text="F" />
+               </children>
+            </VBox>
+            <Separator orientation="VERTICAL" prefHeight="200.0" style="-fx-background-color: black;" />
+         </children>
+      </HBox>
+   </left>
 </BorderPane>
