--- a/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PagePays.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PagePays.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -17,93 +18,15 @@
 <?import javafx.scene.text.TextFlow?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <HBox prefHeight="100.0" prefWidth="200.0" style="-fx-border-color: black;" BorderPane.alignment="CENTER">
-         <children>
-            <ButtonBar>
-              <buttons>
-                  <Button fx:id="btnAcceuil" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: transparent;">
-                     <graphic>
-                        <ImageView blendMode="MULTIPLY" fitHeight="91.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../img/logoJO.jpg" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-              </buttons>
-            </ButtonBar>
-            <ButtonBar>
-              <buttons>
-                <Button fx:id="btnCompetitions" mnemonicParsing="false" onAction="#handleCompetition" prefHeight="50.0" text="Compétitions" />
-                  <Button fx:id="btnClassement" mnemonicParsing="false" prefHeight="50.0" style="-fx-background-color: lime;" text="Classement des pays" textAlignment="CENTER" wrapText="true" />
-                  <Button fx:id="btnParticipant" mnemonicParsing="false" onAction="#handleParticipant" prefHeight="50.0" text="Participant" />
-              </buttons>
-            </ButtonBar>
-            <ButtonBar>
-              <buttons>
-                  <Button fx:id="btnParam" contentDisplay="TOP" mnemonicParsing="false" text="Paramètre">
-                     <graphic>
-                        <ImageView blendMode="MULTIPLY" cache="true" fitHeight="70.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../img/logoParam.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-                <Button fx:id="btnDeco" contentDisplay="TOP" mnemonicParsing="false" onAction="#handleDeconnexion" text="Déconnexion">
-                     <graphic>
-                        <ImageView blendMode="MULTIPLY" cache="true" fitHeight="62.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@../img/logoDeconnexion.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                  </Button>
-              </buttons>
-            </ButtonBar>
-         </children>
-      </HBox>
-   </top>
-   <left>
-      <VBox prefHeight="349.0" prefWidth="214.0" style="-fx-border-color: black; -fx-border-style: solid;" BorderPane.alignment="CENTER">
-         <children>
-            <GridPane prefHeight="186.0" prefWidth="212.0">
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="108.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="104.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints maxHeight="56.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="121.0" minHeight="4.0" prefHeight="84.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="135.0" minHeight="0.0" prefHeight="64.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <TextField promptText="nom pays" GridPane.columnSpan="2">
-                     <GridPane.margin>
-                        <Insets bottom="-10.0" left="10.0" right="10.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <ImageView fitHeight="80.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1" />
-                  <TextFlow prefHeight="200.0" prefWidth="200.0" textAlignment="CENTER" GridPane.rowIndex="2">
-                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre de médaillle" wrappingWidth="109.451171875" />
-                     </children>
-                  </TextFlow>
-               </children>
-            </GridPane>
-         </children>
-      </VBox>
-   </left>
    <center>
-      <GridPane gridLinesVisible="true" prefWidth="141.0" BorderPane.alignment="CENTER">
+      <GridPane alignment="CENTER" gridLinesVisible="true" prefWidth="141.0" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="89.0" minWidth="10.0" prefWidth="61.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="163.0" minWidth="10.0" prefWidth="158.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="121.0" minWidth="10.0" prefWidth="88.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="92.0" minWidth="10.0" prefWidth="79.0" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="80.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="160.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="118.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="106.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="106.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="158.0" minWidth="10.0" prefWidth="111.0" />
         </columnConstraints>
         <rowConstraints>
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -118,15 +41,103 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </BorderPane.margin>
          <children>
-            <Label alignment="CENTER" prefHeight="16.0" prefWidth="155.0" text="Pays" GridPane.columnIndex="1" />
-            <ImageView fitHeight="47.0" fitWidth="88.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2" />
-            <ImageView fitHeight="48.0" fitWidth="78.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" />
-            <ImageView fitHeight="49.0" fitWidth="82.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4" />
-            <Label alignment="CENTER" prefHeight="16.0" prefWidth="114.0" text="Total" GridPane.columnIndex="5" />
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="52.0" prefWidth="162.0" text="Pays" GridPane.columnIndex="1" />
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="47.0" prefWidth="138.0" text="Total médailles" wrapText="true" GridPane.columnIndex="2" />
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="16.0" prefWidth="64.0" text="1" GridPane.rowIndex="1" />
             <Label alignment="CENTER" prefHeight="16.0" prefWidth="63.0" text="2" GridPane.rowIndex="2" />
             <Label alignment="CENTER" prefHeight="16.0" prefWidth="64.0" text="3" GridPane.rowIndex="3" />
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="46.0" prefWidth="113.0" text="Total médailles d'or" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="5" />
+            <Label contentDisplay="CENTER" prefHeight="48.0" prefWidth="108.0" text="Total médailles de bronze" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="3" />
+            <Label contentDisplay="CENTER" prefHeight="48.0" prefWidth="108.0" text="Total médailles d'argent" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="4" />
          </children>
       </GridPane>
    </center>
+   <top>
+      <VBox prefHeight="100.0" prefWidth="890.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <ButtonBar>
+                    <buttons>
+                        <Button fx:id="btnAcceuil" mnemonicParsing="false" style="-fx-background-color: transparent; -fx-border-color: transparent;">
+                           <graphic>
+                              <ImageView blendMode="MULTIPLY" fitHeight="91.0" fitWidth="95.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/logoJO.jpg" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                    </buttons>
+                  </ButtonBar>
+                  <ButtonBar>
+                    <buttons>
+                      <Button fx:id="btnCompetitions" mnemonicParsing="false" onAction="#handleCompetition" prefHeight="50.0" text="Compétitions" />
+                        <Button fx:id="btnClassement" mnemonicParsing="false" prefHeight="50.0" style="-fx-background-color: khaki;" text="Classement des pays" textAlignment="CENTER" wrapText="true" />
+                        <Button fx:id="btnParticipant" mnemonicParsing="false" onAction="#handleParticipant" prefHeight="50.0" text="Participant" />
+                    </buttons>
+                  </ButtonBar>
+                  <ButtonBar>
+                    <buttons>
+                        <Button fx:id="btnParam" contentDisplay="TOP" mnemonicParsing="false" text="Paramètre">
+                           <graphic>
+                              <ImageView blendMode="MULTIPLY" cache="true" fitHeight="70.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/logoParam.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                      <Button fx:id="btnDeco" contentDisplay="TOP" mnemonicParsing="false" onAction="#handleDeconnexion" text="Déconnexion">
+                           <graphic>
+                              <ImageView blendMode="MULTIPLY" cache="true" fitHeight="62.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@../img/logoDeconnexion.png" />
+                                 </image>
+                              </ImageView>
+                           </graphic>
+                        </Button>
+                    </buttons>
+                  </ButtonBar>
+               </children>
+            </HBox>
+            <Separator prefWidth="200.0" style="-fx-background-color: black;" />
+         </children>
+      </VBox>
+   </top>
+   <left>
+      <HBox prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="349.0" prefWidth="214.0">
+               <children>
+                  <GridPane prefHeight="186.0" prefWidth="212.0">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="108.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="106.0" minWidth="10.0" prefWidth="104.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints maxHeight="56.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="121.0" minHeight="4.0" prefHeight="84.0" vgrow="SOMETIMES" />
+                      <RowConstraints maxHeight="135.0" minHeight="0.0" prefHeight="64.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <TextField promptText="nom pays" GridPane.columnSpan="2">
+                           <GridPane.margin>
+                              <Insets bottom="-10.0" left="10.0" right="10.0" />
+                           </GridPane.margin>
+                        </TextField>
+                        <ImageView fitHeight="80.0" fitWidth="109.0" pickOnBounds="true" preserveRatio="true" GridPane.rowIndex="1" />
+                        <TextFlow prefHeight="200.0" prefWidth="200.0" textAlignment="CENTER" GridPane.rowIndex="2">
+                           <children>
+                              <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Nombre de médaillle" wrappingWidth="109.451171875" />
+                           </children>
+                        </TextFlow>
+                     </children>
+                  </GridPane>
+               </children>
+            </VBox>
+            <Separator orientation="VERTICAL" prefHeight="200.0" style="-fx-background-color: black;" />
+         </children>
+      </HBox>
+   </left>
 </BorderPane>
