--- a/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PageCompetitionClassement.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PageCompetitionClassement.fxml
@@ -28,7 +28,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <GridPane>
+            <GridPane gridLinesVisible="true">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="141.0" minWidth="10.0" prefWidth="69.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="267.0" minWidth="10.0" prefWidth="225.0" />
