--- a/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PageCompetitionListeEp.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PageCompetitionListeEp.fxml
@@ -40,7 +40,7 @@
                   <Insets />
                </opaqueInsets>
             </HBox>
-            <GridPane>
+            <GridPane gridLinesVisible="true">
               <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="177.0" minWidth="10.0" prefWidth="162.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="267.0" minWidth="10.0" prefWidth="75.0" />
