--- a/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PageCompetition.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/IHM/src/PageCompetition.fxml
@@ -4,7 +4,6 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
@@ -62,15 +61,7 @@
       </HBox>
    </top>
    <left>
-      <VBox prefHeight="349.0" prefWidth="214.0" style="-fx-border-color: black; -fx-border-style: solid;" BorderPane.alignment="CENTER">
-         <children>
-
-            <Button fx:id="homme" mnemonicParsing="false" onAction="#handleHommeEnable" text="H" />
-            <RadioButton fx:id="sport1" mnemonicParsing="false" text="handball" visible="false" />
-            <RadioButton mnemonicParsing="false" text="RadioButton" />
-            <Button mnemonicParsing="false" text="F" />
-         </children>
-      </VBox>
+      <VBox fx:id="rightVboxCompet" prefHeight="349.0" prefWidth="214.0" style="-fx-border-color: black; -fx-border-style: solid;" BorderPane.alignment="CENTER" />
    </left>
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
