--- a/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageCompetition.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PageCompetition.fxml
@@ -94,14 +94,14 @@
                   </ButtonBar>
                   <ButtonBar>
                     <buttons>
-                      <Button fx:id="btnCompetitions" mnemonicParsing="false" prefHeight="50.0" style="-fx-background-color: khaki;" text="Compétitions" />
+                      <Button fx:id="btnCompetitions" mnemonicParsing="false" prefHeight="50.0" style="-fx-background-color: darkkhaki;" text="Compétitions" />
                         <Button fx:id="btnClassement" mnemonicParsing="false" onAction="#handlePays" prefHeight="50.0" text="Classement des pays" textAlignment="CENTER" wrapText="true" />
                         <Button fx:id="btnParticipant" mnemonicParsing="false" onAction="#handleParticipant" prefHeight="50.0" text="Participant" />
                     </buttons>
                   </ButtonBar>
                   <ButtonBar>
                     <buttons>
-                        <Button fx:id="btnParam" contentDisplay="TOP" mnemonicParsing="false" text="Paramètre">
+                        <Button fx:id="btnParam" contentDisplay="TOP" mnemonicParsing="false" onAction="#handleParamAffichage" text="Paramètre">
                            <graphic>
                               <ImageView blendMode="MULTIPLY" cache="true" fitHeight="70.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
@@ -130,15 +130,7 @@
    <left>
       <HBox prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="400.0" prefWidth="200.0">
-               <children>
-      
-                  <Button fx:id="homme" mnemonicParsing="false" onAction="#handleHommeEnable" text="H" />
-                  <RadioButton fx:id="sport1" mnemonicParsing="false" text="handball" visible="false" />
-                  <RadioButton mnemonicParsing="false" text="RadioButton" />
-                  <Button mnemonicParsing="false" text="F" />
-               </children>
-            </VBox>
+            <VBox fx:id="leftVboxCompet" prefHeight="349.0" prefWidth="214.0" style="-fx-border-color: black; -fx-border-style: solid;" BorderPane.alignment="CENTER"/>
             <Separator orientation="VERTICAL" prefHeight="200.0" style="-fx-background-color: black;" />
          </children>
       </HBox>
