--- a/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PagePays.fxml
+++ b/mud/src/main/java/fr/univ_orleans/iut45/mud/IHM/src/PagePays.fxml
@@ -17,9 +17,9 @@
 <?import javafx.scene.text.Text?>
 <?import javafx.scene.text.TextFlow?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="890.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
    <center>
-      <GridPane alignment="CENTER" gridLinesVisible="true" prefWidth="141.0" BorderPane.alignment="CENTER">
+      <GridPane fx:id="classementPays" alignment="CENTER" gridLinesVisible="true" prefWidth="141.0" BorderPane.alignment="CENTER">
         <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="89.0" minWidth="10.0" prefWidth="61.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.0" minWidth="10.0" prefWidth="160.0" />
@@ -43,9 +43,6 @@
          <children>
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="52.0" prefWidth="162.0" text="Pays" GridPane.columnIndex="1" />
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="47.0" prefWidth="138.0" text="Total médailles" wrapText="true" GridPane.columnIndex="2" />
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="16.0" prefWidth="64.0" text="1" GridPane.rowIndex="1" />
-            <Label alignment="CENTER" prefHeight="16.0" prefWidth="63.0" text="2" GridPane.rowIndex="2" />
-            <Label alignment="CENTER" prefHeight="16.0" prefWidth="64.0" text="3" GridPane.rowIndex="3" />
             <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="46.0" prefWidth="113.0" text="Total médailles d'or" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="5" />
             <Label contentDisplay="CENTER" prefHeight="48.0" prefWidth="108.0" text="Total médailles de bronze" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="3" />
             <Label contentDisplay="CENTER" prefHeight="48.0" prefWidth="108.0" text="Total médailles d'argent" textAlignment="CENTER" wrapText="true" GridPane.columnIndex="4" />
